<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.zabello.fragments.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/referenceFragment"
        android:name="com.example.zabello.fragments.ReferenceFragment"
        android:label="@string/nav_reference"
        tools:layout="@layout/fragment_reference" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.example.zabello.fragments.StatsFragment"
        android:label="@string/nav_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.zabello.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
